--- a/src/VocabularySpider/VocabularySpider.csproj
+++ b/src/VocabularySpider/VocabularySpider.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VocabularySpider.BL\VocabularySpider.BL.csproj" />
+  </ItemGroup>
+
 </Project>
