--- a/test/VocabularySpider.Tests/VocabularySpider.Tests.csproj
+++ b/test/VocabularySpider.Tests/VocabularySpider.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\VocabularySpider.BL\VocabularySpider.BL.csproj" />
     <ProjectReference Include="..\..\src\VocabularySpider\VocabularySpider.csproj" />
   </ItemGroup>
 
