--- a/src/VocabularySpider/VocabularySpider.csproj
+++ b/src/VocabularySpider/VocabularySpider.csproj
@@ -7,10 +7,17 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\VocabularySpider.BL\VocabularySpider.BL.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+  <Content Include="data/verbTenses.json">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
 
 </Project>
