--- a/src/VocabularySpider/VocabularySpider.csproj
+++ b/src/VocabularySpider/VocabularySpider.csproj
@@ -20,4 +20,10 @@
   </Content>
 </ItemGroup>
 
+  <ItemGroup>
+  <Content Include="data/commonVerbIndexes.txt">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
+
 </Project>
