--- a/src/VocabularySpider.Data/VocabularySpider.Data.csproj
+++ b/src/VocabularySpider.Data/VocabularySpider.Data.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VocabularySpider.BL\VocabularySpider.BL.csproj" />
+  </ItemGroup>
+
 </Project>
