--- a/src/VocabularySpider.Data/VocabularySpider.Data.csproj
+++ b/src/VocabularySpider.Data/VocabularySpider.Data.csproj
@@ -1,15 +1,13 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <UserSecretsId>3e0d5e46-1d1f-4113-8128-c60e70420c49</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\VocabularySpider.BL\VocabularySpider.BL.csproj" />
   </ItemGroup>
-
 </Project>
