--- a/src/VocabularySpider.Data/VocabularySpider.Data.csproj
+++ b/src/VocabularySpider.Data/VocabularySpider.Data.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VocabularySpider.BL\VocabularySpider.BL.csproj" />
   </ItemGroup>
+  <ItemGroup>
+  <Content Include="data/secrets.json">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
 </Project>
